--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@okta/okta-auth-js": "^7.14.0",
+    "@okta/okta-react": "^6.10.0",
     "bcrypt": "^6.0.0",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
