--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@okta/okta-auth-js": "^7.14.0",
     "@okta/okta-react": "^6.10.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
