--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "formidable": "^3.5.4",
-    "framer-motion": "^12.23.22",
     "framer-motion": "^12.23.24",
     "jose": "^6.0.12",
     "js-cookie": "^3.0.5",
