--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/cli": "^4.1.14",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "formidable": "^3.5.4",
@@ -35,6 +36,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.14"
   }
 }
