--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/cli": "^4.1.14",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.24",
     "jose": "^6.0.12",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
+    "maplibre-gl": "^5.9.0",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
